RESOLVED FIXED56133
[Qt] Warning that round/roundf functions are already defined when compiled with RVCT 4 on symbian.
https://bugs.webkit.org/show_bug.cgi?id=56133
Summary [Qt] Warning that round/roundf functions are already defined when compiled wi...
Viatcheslav Ostapenko
Reported 2011-03-10 12:25:44 PST
compile : JavaScriptCore\wtf\DateMath.cpp [armv5_udeb.slimdebug] "W:/webkit/Source/JavaScriptCore/wtf/MathExtras.h", line 112: Warning: #1559-D: dllexport/dllimport conflict with "round" (declared at line 344 of "W:/epoc32/include/stdapis/math.h"); dllexport assumed static double round(double num) ^ "W:/webkit/Source/JavaScriptCore/wtf/MathExtras.h", line 119: Warning: #1559-D: dllexport/dllimport conflict with "roundf" (declared at line 405 of "W:/epoc32/include/stdapis/math.h"); dllexport assumed static float roundf(float num)
Attachments
#ifdef out math round replacement functions on RVCT from 3.0.0 (1.37 KB, patch)
2011-03-10 12:35 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2011-03-10 12:35:33 PST
Created attachment 85371 [details] #ifdef out math round replacement functions on RVCT from 3.0.0
Laszlo Gombos
Comment 2 2011-03-10 15:25:42 PST
CCing Nick, Daniel and Kwang for their feedback. The change in the code looks good to me.
Laszlo Gombos
Comment 3 2011-03-14 09:59:16 PDT
Comment on attachment 85371 [details] #ifdef out math round replacement functions on RVCT from 3.0.0 LGTM, r=me.
WebKit Commit Bot
Comment 4 2011-03-14 16:47:27 PDT
Comment on attachment 85371 [details] #ifdef out math round replacement functions on RVCT from 3.0.0 Clearing flags on attachment: 85371 Committed r81081: <http://trac.webkit.org/changeset/81081>
WebKit Commit Bot
Comment 5 2011-03-14 16:47:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.